fix the styling

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
             <button id="search-button">Search</button> 
         </form>
         <div id="movie-container" >
-            <img src="./img/movieIcon.png"/>
-            <div>Start exploring</div>
+            <div id="empty-movie">
+                <img src="./img/movieIcon.png"/>
+                <div>Start exploring</div>
+            </div>
         </div>
         <script src="index.js"></script>
     </body>
