--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="index.css">
+
         <title>Movie Watchlist</title>
     </head>
     <body>
@@ -28,6 +29,6 @@
                 <div>Start exploring</div>
             </div>
         </div>
-        <script src="index.js"></script>
+        <script src="./index.js" charset="utf-8" ></script>
     </body>
 </html>
